Connection status enum, UI wip